plugins {
    id 'java'
}

group 'com.hades.java.test'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
